--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "type": "module",
+  "private": true,
   "dependencies": {
-    "@sendinblue/client": "^3.6.6"
+    "@sendinblue/client": "3.6.5"
   }
 }
