--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
   "type": "module",
   "private": true,
-  "dependencies": {
-    "sib-api-v3-sdk": "^8.5.0"
-  }
+  "dependencies": { "sib-api-v3-sdk": "^8.5.0" }
 }
