--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "type": "module",
   "dependencies": {
-    "@getbrevo/brevo": "^2.0.0"
+    "@getbrevo/brevo": "^2.0.0",
+    "pdfkit": "^0.15.0"
   }
 }
